--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
-      <title></title>
+      <title>Mat o' Mayo</title>
    </head>
    <body>
-
+      <h1>Mat o' Mayo</h1>
    </body>
 </html>
