--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
+      <link rel="stylesheet" href="styles.css">
       <title>Mat o' Mayo</title>
    </head>
    <body>
-      <h1>Mat o' Mayo</h1>
+      <div class="landing">
+         <h1>Mat o' Mayo</h1>
+      </div>
+
    </body>
 </html>
