--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
    <body>
       <div class="landing">
          <h1>Mat o' Mayo</h1>
+         <h2>The most comfortable rug there is</h2>
       </div>
-
+      <div class="product">
+         <div class="product-display">
+            <img src="" alt="">
+            <p>text</p>
+         </div>
+      </div>
    </body>
 </html>
