--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       </div>
       <div class="product">
          <div class="product-display">
-            <img src="" alt="">
+            <img id="img1" class="product-image" src="Images/yellowrug.png" alt="">
             <p>text</p>
          </div>
       </div>
