--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="product">
          <div class="product-display">
             <img id="img1" class="product-image" src="Images/yellowrug.png" alt="">
-            <p>text</p>
+            <p class="product-text">text</p>
          </div>
       </div>
    </body>
