--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
       <div class="product">
          <div class="product-display">
             <img id="img1" class="product-image" src="Images/yellowrug.png" alt="">
-            <p class="product-text">Our mats are made out of the finest quality mayonaise</p>
+            <p class="product-text">Our mats are made out of the finest quality mayonnaise</p>
+         </div>
+         <div class="product-display">
+            <p class="product-text">Specialy crafted to maximize comfort</p>
+            <img id="img2" class="product-image" src="Images/yellowrug.png" alt="">
          </div>
       </div>
    </body>
