--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
+      <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap" rel="stylesheet">
       <link rel="shortcut icon" href="Images/favicon.png" type="image/x-icon">
       <link rel="stylesheet" href="styles.css">
       <title>Mat o' Mayo</title>
@@ -19,6 +20,9 @@
          <div class="product-display">
             <p class="product-text">Specialy crafted to maximize comfort</p>
             <img id="img2" class="product-image" src="Images/mayo.png" alt="Mayo">
+         </div>
+         <div class="">
+            <p id="store"><a href="store.html">Buy your mat o' mayo today!</a></p>
          </div>
       </div>
    </body>
