--- a/store.html
+++ b/store.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
+      <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
       <link rel="shortcut icon" href="Images/favicon.png" type="image/x-icon">
       <link rel="stylesheet" href="store.css">
@@ -12,35 +13,19 @@
       <div class="product-display">
          <div class="product">
             <img src="Images/coming-soon.jpg" class="product-image" alt="">
-            <p>text</p>
+            <p>classic mat</p>
          </div>
          <div class="product">
             <img src="Images/coming-soon.jpg" class="product-image" alt="">
-            <p>text</p>
+            <p>flavored mat</p>
          </div>
          <div class="product">
             <img src="Images/coming-soon.jpg" class="product-image" alt="">
-            <p>text</p>
+            <p>mayo tapestries</p>
          </div>
          <div class="product">
             <img src="Images/coming-soon.jpg" class="product-image" alt="">
-            <p>text</p>
-         </div>
-         <div class="product">
-            <img src="Images/coming-soon.jpg" class="product-image" alt="">
-            <p>text</p>
-         </div>
-         <div class="product">
-            <img src="Images/coming-soon.jpg" class="product-image" alt="">
-            <p>text</p>
-         </div>
-         <div class="product">
-            <img src="Images/coming-soon.jpg" class="product-image" alt="">
-            <p>text</p>
-         </div>
-         <div class="product">
-            <img src="Images/coming-soon.jpg" class="product-image" alt="">
-            <p>text</p>
+            <p>normal mayo</p>
          </div>
       </div>
    </body>
