--- a/store.html
+++ b/store.html
@@ -28,5 +28,8 @@
             <p>normal mayo</p>
          </div>
       </div>
+      <div class="back">
+         <p id="store"><a href="store.html">Back to home</a></p>
+      </div>
    </body>
 </html>
