--- a/store.html
+++ b/store.html
@@ -29,7 +29,7 @@
          </div>
       </div>
       <div class="back">
-         <p id="store"><a href="store.html">Back to home</a></p>
+         <p id="store"><a href="index.html">Back to home</a></p>
       </div>
    </body>
 </html>
