--- a/store.html
+++ b/store.html
@@ -9,7 +9,13 @@
       <title>Store | Mat o' Mayo</title>
    </head>
    <body>
-      <h1>Shop</h1>
+      <div class="header">
+         <h1>Shop</h1>
+         <div class="sale">
+            <div class="tag"></div>
+            <h2>SALE!</h2>
+         </div>
+      </div>
       <div class="product-display">
          <div class="product">
             <img src="Images/coming-soon.jpg" class="product-image" alt="">
